# self-setuper

./: README.md
backend/: main.py  pyproject.toml
backend/assets/win64/: win.srte
backend/src/: __init__.py  cli.py  router_manager.py  server.py  template_files.py  templater.py
backend/src/app/: __init__.py  cli.py  server.py
backend/src/fabrics/: router_fabric.py
backend/src/routers/: __init__.py  template.py
frontend/: package-lock.json  package.json
frontend/app/: +html.tsx  _layout.tsx
frontend/app/(tabs)/: _layout.tsx  build.tsx  index.tsx  test.tsx
frontend/assets/data/: commands.json
frontend/components/: CardPanel.tsx  ControlPanel.tsx  ScriptExtensionSelector.tsx
frontend/components/BuiltFileButton/: BuiltFileButton.tsx
frontend/components/Cards/: index.tsx
frontend/components/ControlPanel/: ControlPanel.tsx
frontend/components/CustomScrollView/: CustomScrollView.tsx  CustomScrollView.types.tsx
frontend/components/Dialog/: Dialog.types.ts  DialogAction.tsx  DialogProvider.tsx
frontend/constants/: Script.ts  Systems.ts
frontend/contexts/: DialogContext.tsx
frontend/core/: CommandHandler.ts  CommandHandler.types.ts
frontend/hooks/: useDialog.ts
frontend/models/: CardApp.ts  OSType.ts
frontend/shared/: types.ts
frontend/utils/: Builder.ts  CommandHandler.ts  CommandHandler.types.ts  FileDownloader.ts  MasterApp.ts  TemplateManager.ts  Templater.ts  Templator.ts
src/: package-lock.json
src/app/: _layout.tsx
src/models/: CardApp.ts
src/utils/: Builder.ts  FileCreator.ts  FileIdManager.ts  MasterApp.ts
(+41 files in other folders)
